syntax = "proto3";

package raft;

message VoteRequest {
  string candidate_id = 1;
  int32 term = 2;
  int32 last_log_index = 3;
  int32 last_log_term = 4;
}

message VoteResponse {
  bool vote_granted = 1;
}

message ElectLeaderRequest {
  // Empty request or include any needed fields here
}

message ElectLeaderResponse {
  string message = 1; // Response message indicating the leader or election result
}

service RaftService {
  rpc RequestVote (VoteRequest) returns (VoteResponse);
  rpc ElectLeader (ElectLeaderRequest) returns (ElectLeaderResponse); // New RPC for triggering leader election
}
